--- a/frontend/clean_encryption_app.html
+++ b/frontend/clean_encryption_app.html
@@ -474,10 +474,11 @@
     </div>
 </div>
 <script>
-// API Configuration - automatically detects environment
+// API Configuration
+const BACKEND_URL = 'https://kakashi09.pythonanywhere.com';
 const API_BASE_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' 
     ? 'http://localhost:5000' 
-    : window.location.origin;
+    : BACKEND_URL;
 
 let historyArr = [];
 
